k8s/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mytime
  namespace: mytime
  labels:
    app.kubernetes.io/name: mytime
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mytime
  ports:
    - name: http
      port: 80
      targetPort: http
