k8s/08-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mytime
  namespace: mytime
  labels:
    app.kubernetes.io/name: mytime
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mytime.example.com`)
      kind: Rule
      services:
        - name: mytime
          port: 80
  tls:
    secretName: mytime-tls
